# assignment

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_STATUS.md  Dockerfile  FINAL_STATUS.md  LICENSE  README.md  READY_FOR_DEPLOYMENT.md  TASK_1_2_3_COMPLETION_REPORT.md  TECHNICAL_DOCUMENTATION.md  VERCEL_DEPLOYMENT_STATUS.md  api.py  app.py  docker-compose.yml  next.config.ts  package-lock.json  package.json  pdf_content_scratch.txt  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup.py  tailwind.config.ts  test_local_deployment.py  test_real_resumes.py  test_render_pdf.py  vercel.json
.github/workflows/: ci.yml
api/: requirements.txt  screen.py
app/: globals.css  layout.tsx  page.tsx
app/components/: CandidateCard.tsx
backend/: Dockerfile  main.py  requirements.txt  test_gemini.py
components/: FileUpload.tsx  JobDescriptionForm.tsx  LoadingScreen.tsx
data/sample_resumes/: README.md  aisha_rodriguez_mlops_engineer.txt  alex_chen_software_engineer.txt  james_whitfield_hr_manager.txt  marcus_johnson_fullstack_dev.txt  priya_sharma_data_scientist.txt  sample_job_description.txt  sarah_okonkwo_nlp_scientist.txt
docs/: deployment.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  (+1 more)
src/: __init__.py
store/: screeningStore.ts
tests/: conftest.py  test_api.py  test_batch_processor.py  test_cache_manager.py  test_embedding_generator.py  test_evaluation.py  test_fairness_checker.py  test_integration.py  test_llm_service.py  test_performance.py  test_ranking_engine.py  test_resume_parser.py  test_section_parser.py  test_similarity_search.py  test_skill_extractor.py  test_skill_matcher.py  test_text_extractor.py  test_vector_store.py
(+41 files in other folders)
